update data classes
Signed-off-by: Ahmed Javed <88615893+vitiligo610@users.noreply.github.com>